feat: div pelican

--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
             <img src="./img/cloe.png" alt="">
         </div>
     </div>
+    <div class="pelican">
+        <div class="pelicanpicture">
+            <img src="./img/pelican.png" alt="">
+        </div>
+        <div class="pelicantext">
+            <h1>Pelican</h1>
+            <p class="shelves">Shelves with hidden hooks</p>
+            <p class="from1">From$89</p>
+            <p class="store">Store or exhibit your favorite objects in the <br> entrance hall, modern hallways, living rooms and <br> bedrooms with a decorative and minimalist touch.</p>
+            <p class="sizes">+ 3 sizes, + 5 color finishes</p>
+            <a href="#">Shop now</a>
+        </div>
+    </div>
 
 
 </body>
