feat: div alada

--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
             <a href="#">Shop now</a>
         </div>
     </div>
+    <div class="alada">
+        <div class="aladatext">
+            <p class="new">New Favorite!</p>
+            <h1>Alada</h1>
+            <p class="floating">Floating folding desk</p>
+            <p class="from2">From$534</p>
+            <p class="timeless">A timeless and discreet folding desk that <br> seamlessly transforms into a decorative shelf in <br> seconds.</p>
+            <p class="color">+ 4 color finishes</p>
+            <a href="#">Shop now</a>
+        </div>
+        <div class="aladapicture">
+            <img src="./img/alada.png" alt="">
+        </div>
 
+    </div>
 
 </body>
 </html>
