feat: corrected and finished project woodendot

--- a/index.html
+++ b/index.html
@@ -92,8 +92,148 @@
         <div class="aladapicture">
             <img src="./img/alada.png" alt="">
         </div>
-
     </div>
-
+    <div class="alba">
+        <img src="./img/alba.png" alt="">
+        <div class="albatext">
+            <h1>Alba Collection</h1>
+            <p class="albamodular">Modular bedside table & shelf</p>
+            <p class="from3">From$272</p>
+            <p class="versatile">A versatile and modular piece with a sculptural <br> touch that can be used as a wall shelf or as a <br> bedside table with concealed storage.</p>
+            <p class="color6">+ 6 color finishes, infinite combinations</p>
+            <a href="#">Shop now</a>
+            <img src="./img/icon5.svg" alt="">
+        </div>
+    </div>
+    <div class="batea">
+        <div class="bateatext">
+            <h1>Batea Collection</h1>
+            <p class="tables">Tables with storage & tray tables</p>
+            <p class="from4">From$272</p>
+            <p class="composed">Composed of clean and rounded lines, the Batea <br> Collection includes unique tables with extra <br> functionality like a removable tray, and hidden
+                <br> storage.</p>
+            <p class="size3">+ 3 sizes, + 6 color finishes</p>
+            <a href="#">Shop now</a>
+        </div>
+        <img src="./img/batea.png" alt="">
+    </div>
+    <h1 class="our">Our pieces inside your home</h1>
+    <p class="get">Get inspired by our products in real-life. Tag us and be featured!</p>
+    <div class="threeoictures">
+        <img src="./img/flower.png" alt="">
+        <img src="./img/hall.png" alt="">
+        <img src="./img/shelf.png" alt="">
+    </div>
+    <img class="icon6" src="./img/icon6.svg" alt="">
+    <div class="the">
+        <p class="team">"The team from Woodendot has displayed utmost professionalism from order to deliver and customer support. We placed an order to the UK and would
+            <br> definitely recommend friends to order from Woodendot!"</p>
+        <p class="uk">R. Aoun, United Kingdom</p>
+        <img class="icon7" src="./img/icon7.svg" alt="">
+    </div>
+    <div class="all">
+        <div class="design">
+            <img src="./img/design.svg" alt="design">
+            <h4>DESIGN</h4>
+            <p>We create furniture pieces with personality, <br> designed to transform your space.</p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="footprint">
+            <img src="./img/footprint.svg" alt="footprint">
+            <h4>FOOTPRINT</h4>
+            <p>We are committed to look after what we love, <br> nature.</p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="made">
+            <img src="./img/made.svg" alt="made">
+            <h4>MADE</h4>
+            <p>Our local design, and production in the village of <br>Iscar, Spain.</p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="wood">
+            <img src="./img/wood.svg" alt="wood">
+            <h4>WOOD</h4>
+            <p>Our characteristic and main material, and its <br>unique and timeless attributes.</p>
+            <a href="#">Learn More</a>
+        </div>
+    </div>
+    <div class="interior">
+        <div class="those">
+            <p>Those who are talking about us...</p>
+            <img src="./img/interior.svg" alt="">
+        </div>
+    </div>
+    <footer>
+        <div class="chast1">
+            <div class="about">
+                <h4>About</h4>
+                <p>About Us</p>
+                <p>Design</p>
+                <p>Sustainability</p>
+                <p>We plant trees</p>
+                <p>Our Story</p>
+                <p>Awards</p>
+            </div>
+            <div class="help">
+                <h4>Help</h4>
+                <p>Holiday Offers FAQ</p>
+                <p>FAQ</p>
+                <p>Warranty</p>
+                <p>Shipments</p>
+                <p>Returns & Claims</p>
+                <p>Contact us</p>
+            </div>
+            <div class="more">
+                <h4>More</h4>
+                <p>Where to find us</p>
+                <p>Woodendot Family</p>
+                <p>Press</p>
+                <p>Affiliates</p>
+                <p>Video Lifestyle</p>
+            </div>
+            <div class="dont">
+                <p>Don’t miss any news and exclusive offers!</p>
+                <p class="letter">Newsletter subscription</p>
+                <img src="./img/fsc.svg" alt="fsc">
+                <img src="./img/tree.svg" alt="tree">
+                <img class="trustpilot" src="./img/trustpilot.svg" alt="trustpilot">
+            </div>
+        </div>
+        <div class="chast2">
+            <img class="copyright" src="./img/copyright.svg" alt="copyright">
+            <img class="cards" src="./img/cards.svg" alt="cards">
+            <img class="term" src="./img/term.svg" alt="term">
+        </div>
+    </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
